# missionPlanAlgo

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  PACKAGE_README.md  README.md  docker-compose.yml  install_java17.sh  pyproject.toml  pytest.ini  requirements.txt  result_edd.json  result_ga.json  result_greedy.json  result_spt.json  run_area_target_greedy.py  setup-java-env.sh  setup.py  test_center_distance_optimization.py  uninstall_java9.sh
.claude/: settings.json
core/: __init__.py  constants.py
docs/: Orekit Java后端集成设计文档.md  README.md  原始设计.md  场景配置工具套件设计文档.md  实验流程.md  批量可见性计算优化设计.md  最新的实验流程.md
evaluation/: __init__.py  area_metrics.py  benchmark.py  failure_analyzer.py  metrics.py  quality_metrics.py
examples/: attitude_angle_example.py  attitude_demo.py  compute_gs_visibility.py  incremental_planning_example.py  maneuver_checker_integration_example.py  multi_mode_satellite_example.py  optimized_scheduler_example.py  pmc_mode_example.py  relay_downlink_example.py  setup_ground_stations.py  unified_constraints_example.py  unified_maneuver_example.py  unified_scheduler_example.py  unified_spatiotemporal_example.py
experiments/: __init__.py  runner.py
java/: Makefile  compile_and_test.sh  download_parquet_deps.sh  run-tests.sh
missionPlanAlgo/: README.md  main.py  requirements.txt
missionPlanAlgo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
payload/: base.py  imaging_time_calculator.py  optical_imager.py  sar_imager.py
results/: FINAL_COMPARISON_REPORT.md  algorithm_comparison.json  area_target_greedy_20260316_195024.json  area_target_greedy_20260316_195054.json  area_target_greedy_20260316_195215.json  area_target_greedy_20260316_195316.json  area_target_greedy_20260316_195432.json  area_target_greedy_20260316_195902.json  area_target_greedy_20260316_195931.json  compare_greedy_edd_spt_ga_20260317_075827.json  compare_greedy_edd_spt_ga_20260317_170433.json  compare_greedy_edd_spt_ga_20260317_171429.json  frequency_aware_ga.json  frequency_comparison.json  ga_result.json  greedy_schedule_20260317_075827.json  greedy_schedule_20260317_170433.json  greedy_schedule_20260317_171429.json  large_scale_comparison.json  large_scale_comparison_report.md  unified_schedule_complete.json  unified_schedule_final.json  unified_schedule_test.json  unified_schedule_with_antennas.json
scenarios/: area_target.json  area_target.json.backup  area_target_demo.json  generated_scenario.json  large_scale_experiment.json  large_scale_frequency.json  large_scale_isl.json  large_scale_with_relay.json  mix_target.json  point_group_scenario.json  point_group_scenario.yaml  priority_validation_scenario.json
scheduler/: __init__.py  area_task_utils.py  base_scheduler.py  clustering_greedy_scheduler.py  coverage_tracker.py  frequency_utils.py  ground_station_scheduler.py  optimized_scheduler.py  rl_interface.py  unified_scheduler.py
scripts/: README.md  analyze_ga_convergence.py  area_benchmark.py  area_benchmark_utils.py  benchmark.py  benchmark_all_algorithms.py  config.py  (+29 more)
(+505 files in other folders)
